--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ Jewelry in the Americas has an ancient history. Beginning as far back as 8800 BC
 Mary's jewelry has received recognition and has been featured in the National Museum of the American Indian, The New York Times Style Magazine, and Sedona Monthly. The collection is sold across the United States and Europe and is carried by the retail stores of Bergdorf Goodman.
       </p>
      <h2>Press</h2> 
-     <a href=" http://nmai.si.edu"><img src=""></a>
-     [nmai-logo.png]<!-- links to: -->
+     <a href=" http://nmai.si.edu"><img src="nmai-logo.png"></a>
+   
 [times-logo.png]<!-- links to: http://www.nytimes.com/pages/t-magazine/ -->
 [sedona-logo.png]<!-- links to: http://www.sedonamonthly.com
 
