--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ Mary's jewelry has received recognition and has been featured in the National Mu
       </p>
      <h2>Press</h2> 
      <a href=" http://nmai.si.edu"><img src="nmai-logo.png"></a>
-   
+    <a href=" http://nmai.si.edu"><img src="nmai-logo.png"></a>
+     <a href=" http://nmai.si.edu"><img src="nmai-logo.png"></a>
 [times-logo.png]<!-- links to: http://www.nytimes.com/pages/t-magazine/ -->
 [sedona-logo.png]<!-- links to: http://www.sedonamonthly.com
 
