Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ Mary's jewelry has received recognition and has been featured in the National Mu
      <h2>Press</h2> 
      <a href=" http://nmai.si.edu"><img src="nmai-logo.png"></a>
     <a href=" http://nmai.si.edu"><img src="nmai-logo.png"></a>
-     <a href=http://www.nytimes.com/pages/t-magazine"><img src="nmai-logo.png"></a>
-[times-logo.png]<!-- links to: / -->
+     <a href=http://www.nytimes.com/pages/t-magazine"><img src="times-logo.png"></a>
+
 [sedona-logo.png]<!-- links to: http://www.sedonamonthly.com
 
     </div>
