Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Mary's jewelry has received recognition and has been featured in the National Mu
      <a href=" http://nmai.si.edu"><img src="nmai-logo.png"></a>
     <a href=" http://nmai.si.edu"><img src="nmai-logo.png"></a>
      <a href=http://www.nytimes.com/pages/t-magazine"><img src="times-logo.png"></a>
-
+ <a href="><img src="times-logo.png"></a>
 [sedona-logo.png]<!-- links to: http://www.sedonamonthly.com
 
     </div>
