--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ Mary's jewelry has received recognition and has been featured in the National Mu
       </p>
      <h2>Press</h2> 
      <a href=" http://nmai.si.edu"><img src="./images/nmai-logo.png"></a>
-    <a href=" http://nmai.si.edu"><img src="nmai-logo.png"></a>
-     <a href=http://www.nytimes.com/pages/t-magazine"><img src="times-logo.png"></a>
- <a href="http://www.sedonamonthly.com"><img src="sedona-logo.png"></a>
+    <a href=" http://nmai.si.edu"><img src="./images/nmai-logo.png"></a>
+     <a href=http://www.nytimes.com/pages/t-magazine"><img src="./images/times-logo.png"></a>
+ <a href="http://www.sedonamonthly.com"><img src="./images/sedona-logo.png"></a>
 
 
     </div>
