--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Mary's jewelry has received recognition and has been featured in the National Mu
      <a href=http://www.nytimes.com/pages/t-magazine"><img src="./images/times-logo.png"></a>
  <a href="http://www.sedonamonthly.com"><img src="./images/sedona-logo.png"></a>
 
-<p>&copy; 2014 Zetsy, All Rights Reserved.</p>
+<p id="copyright">&copy; 2014 Zetsy, All Rights Reserved.</p>
     </div>
   </body>
 </html>
